# ChangeLog for app-emacs/semantic
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/semantic/Attic/ChangeLog,v 1.9 2004/06/24 22:22:55 agriffis Exp $

  20 Apr 2004; David Holm <dholm@gentoo.org> semantic-1.4.4-r1.ebuild:
  Added to ~ppc.

*semantic-1.4.4-r1 (16 Nov 2003)

  16 Nov 2003; <mkennedy@gentoo.org> semantic-1.4.4-r1.ebuild,
  files/60semantic-gentoo.el:
  disable global-semantic-sticky-func-mode

  01 Nov 2003; Mamoru KOMACHI <usata@gentoo.org> files/60semantic-gentoo.el:
  Added semantic-util to 60semantic-gentoo.el. This closed bug #30589.

  25 Oct 2003; Matthew Kennedy <mkennedy@gentoo.org> semantic-1.4.ebuild:
  corrected description. resolves bug 31879

*semantic-1.4.4 (20 Sep 2003)

  08 Dec 2003; Mamoru KOMACHI <usata@gentoo.org> semantic-1.4.4.ebuild:
  Marked as stable

  20 Sep 2003; Matthew Kennedy <mkennedy@gentoo.org> semantic-1.4.4.ebuild,
  files/60semantic-gentoo.el:
  version update. new changes: Given the package a meaningful description, Added
  reasonable version-numbers for dependancies Added useful loading commands to
  the site-file Removed the postinst configuration suggestion. changes
  contributed by Marshall T. Vandegrift <vandem2@rpi.edu> of bug #18861

*semantic-1.4 (31 Oct 2002)

  31 Oct 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
  semantic-1.4.ebuild, files/60semantic-gentoo.el, 
  files/digest-semantic-1.4 :

  Initial import.