@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/semantic
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/semantic/Attic/ChangeLog,v 1.9 2004/06/24 22:22:55 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/semantic/Attic/ChangeLog,v 1.10 2004/09/23 05:25:16 usata Exp $
+
+  23 Sep 2004; Mamoru KOMACHI <usata@gentoo.org> semantic-1.4.4-r1.ebuild,
+  -semantic-1.4.4.ebuild, -semantic-1.4.ebuild:
+  Blocks app-emacs/cedet. Removed old ebuilds.
 
   20 Apr 2004; David Holm <dholm@gentoo.org> semantic-1.4.4-r1.ebuild:
   Added to ~ppc.
